2002-07-03  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/deddoit.c, src/dedscan.c, src/dedtype.c, src/dlog.c:
	use UCH() to fix char-subscript warnings in gcc.

2002-06-29  Thomas E. Dickey  <dickey@invisible-island.net>

	* mkdirs.sh: resync with my-autoconf

2002-04-16  Thomas E. Dickey  <dickey@invisible-island.net>

	* user/ded.man: check-manpage nits

	* user/ded.man: implemented 3T command

	* src/ded.hlp, src/ded.c: implemented 3T

	* src/ded2s.c: implemented 3T (to show absolute seconds)

	* src/dedsort.c: I_opt and G_opt may have values greater than 2

2001-12-11  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/dlog.c: nit

	* src/ftree.c, src/dedscan.c: change interface to rcs_dir()

2001-12-07  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/ftree.c:
	Cygwin implements a /cygdrive which does not appear when scanning "/".
	But we have to assume it's there, otherwise rescanning "/" causes the
	"/cygdrive" entry to be removed.  Also prevent "/" from being purged,
	for the same reason.

2001-07-15  Thomas E. Dickey  <dickey@clark.net>

	* aclocal.m4: overrides for SHELL and CDPATH

	* src/dedscan.c:
	fix an oops (uninitialized value) that appears only on U/Win...

2001-07-11  Thomas E. Dickey  <dickey@clark.net>

	* src/dedring.c: rename 'ring' to work with U/Win

2001-06-22  Thomas E. Dickey  <dickey@clark.net>

	* install-sh: newer version uses ':' rather than 'true'

2001-05-15  Thomas E. Dickey  <dickey@clark.net>

	* src/dlog.c: rename 'newline' param to work with U/Win

	* src/dedcolor.c: rename 'color_names[]' to work with U/Win

2001-01-30  Thomas E. Dickey  <dickey@clark.net>

	* src/dedscan.c: lookup based on z_real_name

	* src/dedscan.c: check for null-pointer in alloc_name()

	* src/ded.c: retain abort(), but make it optional

2001-01-29  Thomas E. Dickey  <dickey@clark.net>

	* src/dedfree.c, src/dedscan.c, src/dedsort.c, src/ded.h:
	caseless-filenames
